--- a/backend/Pipfile
+++ b/backend/Pipfile
@@ -10,6 +10,9 @@ flask-migrate = "*"
 faker = "*"
 flask-bcrypt = "*"
 flask-jwt-extended = "*"
+psycopg2-binary = "*"
+python-dotenv = "*"
+gunicorn = "*"
 
 [dev-packages]
 
